<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/frameLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <ImageView
                android:id="@+id/profile_pic"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="#ffbcfffd"
                android:src="@drawable/baby_100x100"
                android:scaleType="fitXY"
                />
            <ImageButton
                android:id="@+id/camera_pic"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/camera"
                />
        </FrameLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <ImageButton
                    android:id="@+id/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/report"/>
                <ImageButton
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cancel"/>
                <ImageButton
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/save"/>
            </LinearLayout>
            <TextView
                android:id="@+id/first_name_label"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/first_name_label"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/first_name_value"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/first_name_value"
                android:textColor="#000"
                android:background="@drawable/textborder"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/last_name_label"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/last_name_label"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/last_name_value"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/last_name_value"
                android:textColor="#000"
                android:background="@drawable/textborder"
                />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <TextView
        android:id="@+id/gender_label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/gender_label"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        />

        <TextView
            android:id="@+id/age_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/age_label"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <Spinner
            android:id="@+id/gender_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:entries="@array/genders"
            />

        <EditText
            android:id="@+id/age_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/age_value"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textborder"
            android:inputType="number"
            />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
    <TextView
        android:id="@+id/height_label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/height_label"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/weight_label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/weight_label"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        />
</TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <EditText
            android:id="@+id/height_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/height_value"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textborder"
            android:inputType="numberDecimal"
            />

        <EditText
            android:id="@+id/weight_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/weight_value"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textborder"
            android:inputType="numberDecimal"
            />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <TextView
            android:id="@+id/country_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/country_label"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/state_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/state_label"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <EditText
            android:id="@+id/country_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/country_value"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textborder"
            />

        <EditText
            android:id="@+id/state_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/state_value"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textborder"
            />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <TextView
            android:id="@+id/street_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/street_label"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/street_num_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/street_number_label"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <EditText
            android:id="@+id/street_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/street_value"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textborder"
            />

        <EditText
            android:id="@+id/street_number_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/street_number_value"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textborder"
            android:inputType="number"
            />
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_button_text"
            />
        </TableRow>
</TableLayout>